# palanchrom

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  Reprise_Sara.kdev4  Snakefile  compareObs.R  config.yaml  createGenomeFile.py  getGenomeFile.py  getRateBasesBySide.R  getRateMutsBySide.R  meson.build  plotGCvariations.R  plotGCvariationsBinned.R  plotSelectionGCBinned.R
envs/: R.yaml  bedtools.yaml
scripts/: archiveData.R  checkLength.py  commonFigs.R  convertToBed.py  createFigures.R  datToBed.py  extractFastaSeq.sh  filterInterNIEBs.R  filterVCF.R  fixFormat.py  getAncestralBase.py  getDatFiles.py  intersectAll.sh  plots.R  prettyConformFigures.R  setupPackages.R  sortCPGmut.py  sortDuplicate.R  updateInterval.py
sources/: CMakeLists.txt  bed_tools.cpp  bed_tools.h  bed_tools.hpp  bio_entry.cpp  bio_entry.hpp  bio_file.cpp  bio_file.hpp  bio_tools.cpp  bio_tools.h  correctBedtools.cpp  countBases.cpp  countMuts  countMuts.cpp  countMutsV2.cpp  fasta_tools.cpp  fasta_tools.h  fasta_tools.hpp  getAncestralBase  getAncestralBase.cpp  getAncestralBase_reduced.cpp  getCPGInt.cpp  getPattern  getPattern.cpp  makeAncestral  makeAncestral.cpp  makeAncestralGenome.cpp  meson.build  openType.h  reduceFile.cpp  sortCPG.cpp  tools.cpp  tools.hpp  vcf_tools.cpp  vcf_tools.h  vcf_tools.hpp
