add_library(bio_entry bio_entry.cpp)
add_library(bio_file bio_file.cpp bio_entry.cpp)
add_library(bed_tools bed_tools.cpp bio_file.cpp bio_entry.cpp)
add_library(fasta_tools fasta_tools.cpp bio_file.cpp bio_entry.cpp)
add_library(vcf_tools vcf_tools.cpp bio_file.cpp bio_entry.cpp)
add_library(tools tools.cpp)

add_executable(getAncestralBase.bin getAncestralBase.cpp)
add_executable(makeAncestral.bin makeAncestral.cpp)
add_executable(getPattern.bin getPattern.cpp)
add_executable(countBases.bin countBases.cpp)
add_executable(countMuts.bin countMuts.cpp)

target_link_libraries(makeAncestral.bin PUBLIC fasta_tools vcf_tools bed_tools tools)
target_link_libraries(getAncestralBase.bin PUBLIC fasta_tools vcf_tools tools)
target_link_libraries(getPattern.bin PUBLIC fasta_tools bed_tools tools)
target_link_libraries(countBases.bin PUBLIC fasta_tools bed_tools tools)
target_link_libraries(countMuts.bin PUBLIC vcf_tools bed_tools tools)