add_library(bio_entry ../biotools/libs/bio_entry.cpp)
add_library(bio_file ../biotools/libs/bio_file.cpp ../biotools/libs/bio_entry.cpp)
add_library(bed_tools ../biotools/libs/bed_tools.cpp ../biotools/libs/bio_file.cpp ../biotools/libs/bio_entry.cpp)
add_library(fasta_tools ../biotools/libs/fasta_tools.cpp ../biotools/libs/bio_file.cpp ../biotools/libs/bio_entry.cpp)
add_library(vcf_tools ../biotools/libs/vcf_tools.cpp ../biotools/libs/bio_file.cpp ../biotools/libs/bio_entry.cpp)
add_library(tools ../biotools/libs/tools.cpp)

include_directories(../biotools/libs/)
add_executable(getAncestralBase.bin getAncestralBase.cpp)
add_executable(makeAncestral.bin makeAncestral.cpp)
add_executable(getPattern.bin getPattern.cpp)
add_executable(countBases.bin countBases.cpp)
add_executable(countMuts.bin countMuts.cpp)

target_link_libraries(makeAncestral.bin PUBLIC fasta_tools vcf_tools bed_tools tools)
target_link_libraries(getAncestralBase.bin PUBLIC fasta_tools vcf_tools tools)
target_link_libraries(getPattern.bin PUBLIC fasta_tools bed_tools tools)
target_link_libraries(countBases.bin PUBLIC fasta_tools bed_tools tools)
target_link_libraries(countMuts.bin PUBLIC vcf_tools bed_tools tools)